--- a/02-second_gate-damaged_or_whole.ipynb
+++ b/02-second_gate-damaged_or_whole.ipynb
@@ -156,7 +156,7 @@
     "                                            class_mode=None, \n",
     "                                            shuffle=False) \n",
     "    \n",
-    "    bottleneck_features_train = model.predict_generator(generator, nb_train_samples)\n",
+    "    bottleneck_features_train = model.predict_generator(generator, (nb_train_samples/batch_size))\n",
     "    np.save(open(location+'/bottleneck_features_train.npy', 'w'), bottleneck_features_train)\n",
     "    \n",
     "    # repeat with the validation data\n",
@@ -165,7 +165,7 @@
     "                                           batch_size=16,\n",
     "                                           class_mode=None,\n",
     "                                           shuffle=False)\n",
-    "    bottleneck_features_validation = model.predict_generator(generator, nb_validation_samples)\n",
+    "    bottleneck_features_validation = model.predict_generator(generator, (nb_validation_samples/batch_size))\n",
     "    np.save(open(location+'/bottleneck_features_validation.npy', 'w'), bottleneck_features_validation)"
    ]
   },
